--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	HEX: <input id="hex"></input>
 </code>
 
-<p><a href="javascript:location='http://localhost/tests/javascript/colorpicker/#' + encodeURIComponent(location)">Colorpick</a> &lt;&lt; drag to your bookmarks OR drag an image onto the canvas</p>
+<p><a href="javascript: location='http://webblocks.nl/tests/colorpicker/#' + encodeURIComponent(location); void(0)">Colorpick</a> &lt;&lt; drag to your bookmarks OR drag an image onto the canvas</p>
 
 <script src="colorpicker.js"></script>
 
